[package]
name = "xlink-rs-test"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = {version = "1.25", features = ["derive"]}

tokio = {version = "1.51", features = ["full"]}
tokio-stream = "0.1"

getifaddrs = "0.6"

memchr = "2.8"

smallvec = "1.15"

astral-tokio-tar = "0.6"
xz = "0.1"

msgpack-rpc = "0.4"
rmpv = "1.3"

serde = { version = "1", features = ["derive"]}
serde-rmpv = "0.0.1"
serde_repr = "0.1"

rnop = {git = "https://github.com/w-utter/rnop", features = ["serde"]}
